[gd_scene load_steps=7 format=3 uid="uid://bdlgclq4e2pal"]

[ext_resource type="Script" uid="uid://d2ryc7dgeryju" path="res://Scripts/uiManager.gd" id="1_srcu5"]
[ext_resource type="Texture2D" uid="uid://dnl6aivenht6l" path="res://Art/Crosshair_4.png" id="2_oaevd"]
[ext_resource type="Texture2D" uid="uid://cee2p8e86okcn" path="res://Art/left_hand.png" id="3_weo7u"]
[ext_resource type="Texture2D" uid="uid://bslb11xro8fkb" path="res://Art/knife_hand2.png" id="4_srcu5"]

[sub_resource type="InputEventKey" id="InputEventKey_hhcpw"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_mxvw5"]
events = [SubResource("InputEventKey_hhcpw")]

[node name="UI" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_srcu5")

[node name="Gameplay" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Crosshair" type="TextureRect" parent="Gameplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 929.0
offset_top = 509.0
offset_right = 952.0
offset_bottom = 532.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_oaevd")
stretch_mode = 3

[node name="LeftHand" type="TextureRect" parent="Gameplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 161.0
offset_top = 670.0
offset_right = 425.0
offset_bottom = 1444.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("3_weo7u")

[node name="KnifeHand2" type="TextureRect" parent="Gameplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1320.0
offset_top = 113.0
offset_right = 1695.0
offset_bottom = 1178.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("4_srcu5")

[node name="ItemCounts" type="VBoxContainer" parent="Gameplay"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 552.0
scale = Vector2(0.5, 0.5)

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0878524, 8.95412e-05, 0.157614, 0.290196)

[node name="Buttons" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 51.0
offset_right = 76.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/Buttons"]
layout_mode = 2
shortcut = SubResource("Shortcut_mxvw5")
text = "Resume"

[node name="ExitToMenuButton" type="Button" parent="PauseMenu/Buttons"]
layout_mode = 2
disabled = true
text = "Exit To Main Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/Buttons"]
layout_mode = 2
text = "Quit Game"
